MHWC-53 - UX II recommendations See more button (including PZ)

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -983,30 +983,6 @@ ul.time-and-counters li .counter-label {
 .news-item .news-item-content .summary-news {
   margin-bottom: 1em;
 }
-.news-see-more-button,
-.view-events-search .views-field-view-node .field-content a {
-  border: 1px solid #b0b1b3;
-  border-radius: 3px;
-  color: #b0b1b3;
-  text-transform: uppercase;
-  padding: 2px 7px 2px 7px;
-  font-size: 12px;
-  transition: 300ms;
-  background-position: 110%;
-}
-.news-see-more-button:hover,
-.view-events-search .views-field-view-node .field-content a:hover {
-  text-decoration: none;
-  color: #58595b;
-  border: 1px solid #58595b;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background: url(../images/ico-plus-green.png) no-repeat 91% 4px;
-  padding-right: 2em;
-  transition: 300ms;
-}
 .news-see-more-button a {
   color: #b0b1b3;
 }
@@ -2280,6 +2256,7 @@ span.pages {
   bottom: 0;
   position: absolute;
   margin-bottom: 16px;
+  width: 174px;
 }
 .content-fluid h2 {
   color: #003399;
@@ -2579,49 +2556,6 @@ body.good-practice-exchange .footer {
   position: absolute;
   bottom: -36px;
   left: 5%;
-}
-.page-media-centre-news .main-container #block-system-main .view .views-row .more-link,
-.page-search .main-container #block-system-main .view .views-row .more-link,
-.page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link,
-.page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link {
-  border: 1px solid #b0b1b3;
-  border-bottom: 1px solid #b0b1b3 !important;
-  border-radius: 3px;
-  color: #b0b1b3;
-  text-transform: uppercase;
-  padding: 2px 7px 2px 7px;
-  font-size: 12px;
-  font-weight: normal;
-  font-style: normal;
-  display: block;
-  float: left;
-  position: absolute;
-  bottom: 0;
-  margin-left: 0;
-  transition: 300ms;
-  background-position: 110%;
-}
-.page-media-centre-news .main-container #block-system-main .view .views-row .more-link:hover,
-.page-search .main-container #block-system-main .view .views-row .more-link:hover,
-.page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link:hover,
-.page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link:hover {
-  text-decoration: none;
-  color: #58595b;
-  border: 1px solid #58595b;
-  border-bottom: 1px solid #58595b !important;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background: url(../images/ico-plus-green.png) no-repeat 91% 4px;
-  padding-right: 2em;
-}
-.page-media-centre-news .main-container #block-system-main .view .views-row .more-link:before,
-.page-search .main-container #block-system-main .view .views-row .more-link:before,
-.page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link:before,
-.page-media-centre-press-room .main-container #block-system-main .view .views-row .more-link:before {
-  content: '';
-  display: none;
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .field-name-field-summary,
 .page-search .main-container #block-system-main .view .views-row .field-name-field-summary,
@@ -3879,6 +3813,7 @@ body.een .box-type-partner {
   margin-top: auto;
   display: flex;
   justify-content: center;
+  background: transparent;
 }
 .node-type-article article .field-name-body.field-type-text-with-summary .become-partner .coments .col .more-link a {
   font-size: 0.9em;
@@ -4323,7 +4258,11 @@ body.een .box-type-partner {
   margin-left: 230px;
   float: left;
   clear: both;
-  margin-top: -2em;
+  margin-top: 0;
+}
+.page-events .region-content #block-system-main .view-events-search .view-content .views-row .views-field-view-node span {
+  display: block;
+  width: 300px;
 }
 .page-events .region-content #block-system-main .view-events-search .view-content .views-row .views-field-field-start-date .event_country {
   width: 180px;
@@ -4360,7 +4299,7 @@ span.add-to-my-calendar {
   width: 200px;
   text-align: left;
   padding-top: 0px;
-  margin-top: -2em;
+  margin-top: -22px;
 }
 .add-to-calendar input[type=checkbox] {
   display: none;
@@ -5110,36 +5049,12 @@ body.european-week .media-body p {
 }
 body.press-room .media-body a.more-link,
 body.european-week .media-body a.more-link {
-  border: 1px solid #b0b1b3;
-  border-bottom: 1px solid #b0b1b3 !important;
-  border-radius: 3px;
-  color: #b0b1b3;
-  text-transform: uppercase;
-  padding: 2px 7px 2px 7px;
-  font-size: 12px;
-  font-weight: normal;
-  font-style: normal;
-  display: block;
   float: left;
   position: absolute;
   bottom: 0;
   margin-left: 0;
   transition: 300ms;
-  background-position: 110%;
   background-color: transparent;
-}
-body.press-room .media-body a.more-link:hover,
-body.european-week .media-body a.more-link:hover {
-  text-decoration: none;
-  color: #58595b;
-  border: 1px solid #58595b;
-  border-bottom: 1px solid #58595b !important;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background: url(../images/ico-plus-green.png) no-repeat 91% 4px;
-  padding-right: 2em;
 }
 body.press-room .media-body a.more-link:before,
 body.european-week .media-body a.more-link:before {
@@ -6227,43 +6142,6 @@ body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .be
   position: relative;
   padding-bottom: 4em;
 }
-body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(1) .box-before.news .view-news .view-content > div .media-body a.more-link {
-  clear: both;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  line-height: 1.42857143;
-  font-family: 'Open Sans';
-  box-sizing: border-box;
-  background-color: transparent;
-  text-decoration: none;
-  border: 1px solid #b0b1b3;
-  border-bottom: 1px solid #b0b1b3 !important;
-  border-radius: 3px;
-  color: #b0b1b3;
-  text-transform: uppercase;
-  padding: 2px 7px 2px 7px;
-  font-size: 12px;
-  transition: 300ms;
-  background-position: 110%;
-  position: absolute;
-  left: 15px;
-  bottom: 0;
-}
-body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(1) .box-before.news .view-news .view-content > div .media-body a.more-link:hover {
-  text-decoration: none;
-  color: #58595b;
-  border: 1px solid #58595b;
-  border-bottom: 1px solid #58595b !important;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background: url(../images/ico-plus-green.png) no-repeat 91% 4px;
-  padding-right: 2em;
-}
-body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(1) .box-before.news .view-news .view-content > div .media-body a.more-link:before {
-  content: '';
-  display: none;
-}
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(1) .box-before.news .view-news .view-content > div:nth-child(2) {
   border-bottom: 0;
   padding-bottom: 12px;
@@ -7157,33 +7035,15 @@ body.page-tools-and-publications-practical-tools .view-practical-tools .view-con
   padding-top: 1em;
 }
 #block-hwc-good-practice-exchange-gpe-news-events .view-news .media-body a.more-link {
-  border: 1px solid #b0b1b3;
-  border-bottom: 1px solid #b0b1b3 !important;
-  border-radius: 3px;
-  color: #b0b1b3;
-  text-transform: uppercase;
-  padding: 2px 7px 2px 7px;
-  font-size: 12px;
-  font-weight: normal;
-  font-style: normal;
   display: block;
   float: left;
   position: absolute;
   bottom: 0;
   margin-left: 0;
-  transition: 300ms;
-  background-position: 110%;
   background-color: transparent;
 }
 #block-hwc-good-practice-exchange-gpe-news-events .view-news .media-body a.more-link:hover {
   text-decoration: none;
-  color: #58595b;
-  border: 1px solid #58595b;
-  border-bottom: 1px solid #58595b !important;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
   background: url(../images/ico-plus-green.png) no-repeat 91% 4px;
   padding-right: 2em;
 }
@@ -7955,6 +7815,65 @@ aside.col-md-3 .region.region-sidebar-first.well .block-menu-block.left-menu h2.
 }
 #block-menu-block-5 > div > ul li.last {
   margin-bottom: 1em;
+}
+/*See more new style*/
+body a.more-link,
+body .news-see-more-button,
+body .view-events-search .views-field-view-node .field-content a {
+  color: #003399;
+  font-size: 1.2rem !important;
+  border: 1px solid #003399;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  text-transform: uppercase;
+  padding: 2px 7px 2px 7px;
+  /*rewrite others see more*/
+  padding-top: 2px !important;
+  padding-bottom: 2px !important;
+  /* end rewrite others see more*/
+  font-size: 12px;
+  font-weight: bold;
+  font-style: normal;
+  display: block;
+  float: left;
+  position: absolute;
+  bottom: 0;
+  margin-left: 0;
+  transition: 300ms;
+  background-position: 110%;
+  text-decoration: none;
+  background: url(../images/ico-plus-green.png) no-repeat 91% 4px;
+  background-color: transparent;
+  padding-right: 2em;
+}
+body a.more-link:hover,
+body .news-see-more-button:hover,
+body .view-events-search .views-field-view-node .field-content a:hover {
+  color: #9cca00;
+  border: 1px solid #9cca00;
+  background-color: transparent;
+}
+body a.more-link:before,
+body .news-see-more-button:before,
+body .view-events-search .views-field-view-node .field-content a:before {
+  content: '';
+  display: none;
+}
+/* See more other style */
+#block-views-publications-slideshow-slidehow .more-link,
+.node-type-priority-area .region-content .block-hwc-priority-areas ul li .more-link {
+  color: #003399;
+  background-color: transparent;
+  font-weight: bold;
+  font-style: normal;
+  border: 0;
+  background: transparent;
+  position: relative;
+  float: none;
+  text-transform: none;
+  padding-left: 0;
 }
 .isMobile {
   float: right !important;
@@ -8743,7 +8662,7 @@ aside.col-md-3 .region.region-sidebar-first.well .block-menu-block.left-menu h2.
     margin-left: 230px;
     float: left;
     clear: both;
-    margin-top: -2em;
+    margin-top: 0;
   }
   .page-events .region-content #block-system-main .views-row > div {
     margin-left: 0;
@@ -9028,10 +8947,6 @@ aside.col-md-3 .region.region-sidebar-first.well .block-menu-block.left-menu h2.
   .timeline > div:nth-child(3) {
     position: absolute;
     right: 178px;
-  }
-  .page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row .views-field-view-node,
-  .add-to-calendar {
-    margin-top: auto;
   }
   .page-events #osha-events-dates-form {
     width: 157px;
