--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -640,7 +640,7 @@
 		margin-left: 230px;
 		float: left;
 		clear: both;
-		margin-top: -2em;  
+		margin-top: 0;  
     }
 
 	.page-events .region-content #block-system-main .views-row > div{
@@ -1019,11 +1019,6 @@
     		right: 178px;
     	}
 	} 
-
-	.page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row .views-field-view-node,
-	.add-to-calendar{
-		margin-top: auto;
-	}
 
 	.page-events #osha-events-dates-form {
     	width: 157px;
