--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6450,10 +6450,10 @@ body.newsletter{
 		}
 
 		.field-name-field-introductory-text{
-			float: left;
-			width: 70%;
-			padding: 1em 1em 0 0;
-			margin-top: 1em;
+			float: none;
+			width: 100%;
+			padding: 0;
+			margin-top: 0;
 			a{
 				font-weight: bold;
 			}
@@ -6520,10 +6520,12 @@ body.newsletter{
 						height: 200px;
 						margin: auto;
 						position: relative;
-
+						display: flex;
 						.multicarousel--block--inner{
 						    transition: 1s ease all;
 						    float: left;
+						    display: flex;
+						    justify-content: center;
 						    .item {
 							    float: left;
 							    > .slider-item{
@@ -6590,6 +6592,10 @@ body.newsletter{
 						    	}
 						    }
 						}
+
+						.btn-primary.no-slider{
+							display: none
+						}
 					}
 				}
 			}
@@ -6624,6 +6630,10 @@ body.newsletter{
   			}
 		}
 
+		ol.multicarousel-indicators.no-slider{
+			display: none !important;
+		}
+
 		.group-participate{
 			width: 100%;
 			background: url(../images/gpa-how-to-participate-background.png) no-repeat;
@@ -6632,6 +6642,7 @@ body.newsletter{
 			color:#FFF;
 			float: left;
 			margin-bottom: 3em;
+			margin-top: 2em;
 
 			h2{
 				color: #FFF;
@@ -6686,7 +6697,9 @@ body.newsletter{
 	}
 
 	.group-faq{
-		width: 75%;
+		width: 100%;
+		padding-left: 2em;
+		padding-right: 2em;
 		clear: both;
 	    margin: 0 auto;
 	}
