--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -1,6 +1,7 @@
 .isMobile{
 	float: right !important;
 }
+
 @media (min-width: 1200px) {
 	/*Slider Publications*/
 	body.page-tools-and-publications-publications{
@@ -20,7 +21,6 @@
 
 	}
 }
-
 
 @media (max-width: 1200px){
 
@@ -315,10 +315,7 @@
 	    cursor: inherit;
 	}
 
-
 }
-
-
 
 @media (min-width: 1480px) {
 
@@ -442,7 +439,6 @@
 
 }
 
-
 @media (max-width: 1280px) {
 
 	/* Events */
@@ -473,6 +469,17 @@
 		.pane-node-profile-update-link{
 		 	width: 376px;
 		 	margin-bottom: 2em;
+		}
+	}
+
+}
+
+@media (min-width: 1919px) {
+	.front-page{
+		.go-to-anchor{
+			&:before{
+			    display: block;
+			}
 		}
 	}
 
