--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -7907,6 +7907,9 @@ body .views-field-search-api-relevance a {
   padding-left: 0;
 }
 /*Home page*/
+.front-page .go-to-anchor {
+  cursor: pointer;
+}
 .front-page .go-to-anchor:before {
   content: '';
   position: fixed;
@@ -7917,9 +7920,109 @@ body .views-field-search-api-relevance a {
   border-radius: 30px;
   bottom: 0;
   left: 48.4%;
-  cursor: pointer;
   display: none;
   border: 4px solid #FFF;
+}
+.front-page .slider--video--section {
+  clear: both;
+  padding-top: 2em;
+}
+.front-page .slider--video--block .slider--video--items .view-header h2 {
+  display: none;
+}
+.front-page .slider--video--block .slider--video--items .view-header p {
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block {
+  overflow: hidden;
+  padding: 0 3.5rem;
+  width: 100%;
+  height: 200px;
+  margin: auto;
+  position: relative;
+  display: flex;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner {
+  transition: 1s ease all;
+  float: left;
+  display: flex;
+  justify-content: center;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item img {
+  width: 65%;
+  margin: 0 auto;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item .views-field {
+  border-right: 1px solid #CCC;
+  height: 140px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item > .slider-item {
+  text-align: center;
+  padding: 0 0 0 1rem;
+  margin: 1rem;
+  color: #666;
+  overflow: hidden;
+  position: relative;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #DEE999;
+  padding: 1.2em;
+  margin: 0 1em;
+  font-weight: 700;
+  text-align: center;
+  font-size: 0.85em;
+  min-height: 150px;
+  background: #FFF;
+  border-radius: 7px;
+  text-transform: uppercase;
+  letter-spacing: -0.5px;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item p:hover {
+  border: 2px solid #c9da60;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .leftLst.over,
+.front-page .slider--video--block .slider--video--items .multicarousel--block .rightLst.over {
+  pointer-events: none;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .leftLst.over img,
+.front-page .slider--video--block .slider--video--items .multicarousel--block .rightLst.over img {
+  opacity: 0.4;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .rightLst.over {
+  pointer-events: none;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .leftLst {
+  position: absolute;
+  top: -19px;
+  left: -4px;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .rightLst {
+  position: absolute;
+  top: -19px;
+  right: 0;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .btn-primary {
+  background: #FFF;
+  height: 100%;
+  cursor: pointer;
+  border: 0;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .btn-primary:hover img {
+  opacity: 0.8;
+}
+.front-page .slider--video--block .slider--video--items .multicarousel--block .btn-primary.no-slider {
+  display: none;
+}
+.front-page .footer {
+  margin-top: 0;
 }
 .isMobile {
   float: right !important;
