--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -7907,10 +7907,10 @@ body .views-field-search-api-relevance a {
   padding-left: 0;
 }
 /*Home page*/
-.front-page .go-to-anchor {
+body.front-page .go-to-anchor {
   cursor: pointer;
 }
-.front-page .go-to-anchor:before {
+body.front-page .go-to-anchor:before {
   content: '';
   position: fixed;
   z-index: 9999999;
@@ -7923,45 +7923,52 @@ body .views-field-search-api-relevance a {
   display: none;
   border: 4px solid #FFF;
 }
-.front-page .slider--video--section {
+body.front-page .main-container #block-hwc-homepage-hwc-homepage-topics h2.block-title span {
+  background: #daea96;
+}
+body.front-page .slider--video--section {
   clear: both;
   padding-top: 2em;
 }
-.front-page .slider--video--block .slider--video--items .view-header h2 {
+body.front-page .slider--video--block .slider--video--items {
+  padding-bottom: 2em;
+}
+body.front-page .slider--video--block .slider--video--items .view-header h2 {
   display: none;
 }
-.front-page .slider--video--block .slider--video--items .view-header p {
+body.front-page .slider--video--block .slider--video--items .view-header p {
   text-align: center;
   width: 80%;
   margin: 0 auto;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block {
   overflow: hidden;
   padding: 0 3.5rem;
   width: 100%;
-  height: 200px;
+  height: 180px;
   margin: auto;
   position: relative;
   display: flex;
+  padding-bottom: 2em;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner {
   transition: 1s ease all;
   float: left;
   display: flex;
   justify-content: center;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item img {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item img {
   width: 65%;
   margin: 0 auto;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item .views-field {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item .views-field {
   border-right: 1px solid #CCC;
   height: 140px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item > .slider-item {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item > .slider-item {
   text-align: center;
   padding: 0 0 0 1rem;
   margin: 1rem;
@@ -7969,7 +7976,7 @@ body .views-field-search-api-relevance a {
   overflow: hidden;
   position: relative;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item p {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item p {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7985,43 +7992,43 @@ body .views-field-search-api-relevance a {
   text-transform: uppercase;
   letter-spacing: -0.5px;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item p:hover {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .multicarousel--block--inner .item p:hover {
   border: 2px solid #c9da60;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .leftLst.over,
-.front-page .slider--video--block .slider--video--items .multicarousel--block .rightLst.over {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .leftLst.over,
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .rightLst.over {
   pointer-events: none;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .leftLst.over img,
-.front-page .slider--video--block .slider--video--items .multicarousel--block .rightLst.over img {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .leftLst.over img,
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .rightLst.over img {
   opacity: 0.4;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .rightLst.over {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .rightLst.over {
   pointer-events: none;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .leftLst {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .leftLst {
   position: absolute;
   top: -19px;
   left: -4px;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .rightLst {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .rightLst {
   position: absolute;
   top: -19px;
   right: 0;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .btn-primary {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .btn-primary {
   background: #FFF;
   height: 100%;
   cursor: pointer;
   border: 0;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .btn-primary:hover img {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .btn-primary:hover img {
   opacity: 0.8;
 }
-.front-page .slider--video--block .slider--video--items .multicarousel--block .btn-primary.no-slider {
+body.front-page .slider--video--block .slider--video--items .multicarousel--block .btn-primary.no-slider {
   display: none;
 }
-.front-page .footer {
+body.front-page .footer {
   margin-top: 0;
 }
 .isMobile {
