MHWC-48 and MHWC-49

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -9449,6 +9449,12 @@ body.front-page .footer {
     margin-right: 0;
     margin-left: 0;
   }
+  .left-menu.accordion-menu {
+    float: left;
+  }
+  .region-sidebar-second {
+    padding-top: 2em;
+  }
 }
 @media (max-width: 767px) {
   body.front-page .newsletter-social-media .newsletter {
