--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -7869,7 +7869,7 @@ body.front-page .go-to-anchor:before {
   border-radius: 30px;
   bottom: 0;
   left: 48.4%;
-  display: none;
+  display: block;
   border: 4px solid #FFF;
 }
 body.front-page .main-container {
