--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9133,7 +9133,7 @@ body.front-page{
 		    border-radius: 30px;
 		    bottom: 0;
 		    left: 48.4%;
-		    display: none;
+		    display: block;
 		    border: 4px solid #FFF;
 		}
 	}
