--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7554,7 +7554,7 @@ body.page-tools-and-publications-publications{
 				display: flex;
 			    flex-wrap: wrap;
 			    justify-content: center;
-			    background: transparent;
+			    background: transparent !important;
 			    padding-bottom: 1em;
 				a{
 					margin-top: 0em;
@@ -7627,8 +7627,17 @@ body.page-tools-and-publications-publications{
 
 				a.more-link{
 					justify-content: left;
-					font-size: 1.2rem;
-    				padding-top: 5px;
+					font-size: 1.2rem !important;
+					padding-top: 5px !important;
+					float: none;
+					position: relative;
+					border: 0;
+					padding-left: 0;
+					text-transform: none;
+					&:hover{
+						color: #003399;
+						text-decoration: underline;
+					}
 				}
 			}
 		}
@@ -9117,6 +9126,9 @@ body{
     float: none;
     text-transform: none;
     padding-left: 0;
+    &:hover{
+    	text-decoration: underline;
+    }
 }	
 
 /*Home page*/
